# Warp-Surgical

./: AGENTS.md  CGAL_MESH_README.md  CLAUDE.md  IMGUI_PBF_ENHANCEMENT.md  KRNSolver.py  PBDSolver.py  PBF_IMPLEMENTATION.md  README.md  README_PBF_EXAMPLE.md  TODO.txt  centrelines.py  cgal_mesh_demo.py  cgal_mesh_generator.py  cgal_to_warp.py  collision_kernels.py  connectivity.py  custom_xpdb.py  diff_fluids_sim.py  example_granular_gui.py  example_pbf2_gui.py  example_pbf_debug.py  example_pbf_gui.py  example_pbf_opengl.py  example_pbf_stable.py  example_pbf_warp_gui.py  fluids.py  grasping.py  gui_num.txt  gui_step.tmp  haptic_device.py  heating.py  imgui.ini  instruments.py  integrator_pbf.py  joystick_monitor.py  liver_mesh_output.mesh  liver_mesh_viewer.py  liver_mesh_viewer_matplotlib.py  liver_mesh_viewer_opengl.py  liver_mesh_viewer_simple.py  (+35 more)
.claude/: settings.local.json
haptics/: simple_haptics.py
isaacLab/: =1.0.1  FrankaReachEnv.xml  STARReachEnv.xml  UR10ReachEnv.xml  _isaac_sim
isaacLab/logs/rsl_rl/allegro_hand/2025-10-01_14-21-09/: events.out.tfevents.1759321335.mnaskret-Precision-7560.124984.0
isaacLab/logs/rsl_rl/cartpole_direct/2025-09-17_14-06-26/: model_0.pt  model_100.pt  (+3 more)
isaacLab/scripts/environments/: omni_agent.py
legacy/: GPUCloth.py  ws-openhaptics_test.py
meshes/: fat-liver.connector  fat.tris  gallbladder-fat.connector  gallbladder.indices  gallbladder.vertices  liver.vertices  test.usdc
meshes/cavity/: cavity.tris  cavity.uvs  cavity.vertices
meshes/centrelines/: cystic_artery.cntr  cystic_duct.cntr
meshes/fat/: model.edges  model.tetras  model.uvs  model.vertices
meshes/gallbladder/: model.edges  model.tris  model.uvs
meshes/liver/: liver.usd  model.edges  model.tetras  model.tris  model.uvs
newton/: IMPLEMENTATION_SUMMARY.md  LIVER_FLATTENING_FIX.md  QUICK_FIX_SUMMARY.md  SHAPE_RECOVERY_GUIDE.md  SOFT_MESH_KEY_USAGE.md  pyproject.toml  test_inverted_tets.py
newton/newton/_src/sim/: builder.py  model.py
newton/newton/_src/utils/: import_usd.py
newton/newton/examples/articulation/: example_basic_franka_arm.py  example_basic_star_robot.py  example_haptic_franka.py  example_haptic_star.py
newton/newton/examples/basic/: example_basic_soft_body.py  example_basic_soft_body_from_usd.py
playback/: tissue_playback.py
tetmesh_abdomen/: model.labels  model.tris  model.uvs  model.vertices
tetmesh_liver/: model.edges  model.labels  model.tetras  model.tris  model.uvs  model.vertices
(+175 files in other folders)
