[project]
name = "ff-srl2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.45",
    "matplotlib>=3.9.4",
    "newton-physics",
    "pycollada>=0.9.2",
    "pyglet==2.1.3", # for some reason higher versions dont work for Przemek
    "pyopenhaptics>=1.0.1",
    "trimesh>=4.7.1",
    "usd-core>=25.5.1",
    "warp-lang>=1.9.0",
    "numpy>=1.24.0",  # Required for CGAL mesh processing
    "pillow>=10.0.0",  # For image processing support
    "scipy>=1.10.0",  # For Gaussian filtering and image processing
    "scikit-image>=0.20.0",  # For marching cubes surface extraction
]


[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = true

[[tool.uv.index]]
url = "https://pypi.org/simple"

[tool.uv.sources]
#newton-physics = { path = "../newton", editable = true }
#warp-lang = { path = "../warp", editable = true }

